removed more unwanted features fixed styling to allow game-info to be wrapped

--- a/app/modules/box-scores/box-scores.less
+++ b/app/modules/box-scores/box-scores.less
@@ -9,6 +9,7 @@
     .flexDisplay;
     .flexDirection(row);
     .flexJustify(space-between);
+    .flexWrap(wrap);
   }
   &-board{
     @boardGrey:#e8e8e8;
@@ -184,7 +185,7 @@
 .game{//start of the game styles
   width:325px;
   height:128px;
-  margin: auto 0;
+  margin-bottom: 20px;
   &-title{
     font-size:14px;
     line-height: 18px;
